--- a/index-2.html
+++ b/index-2.html
@@ -503,7 +503,7 @@
                 <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v148b2.html?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
             </div>
             <div class="footer">
-                <div class="pull-right">&copy; 2014-2015 <a href="http://www.zi-han.net/" target="_blank">zihan's blog</a>
+                <div class="pull-right">&copy; 2017-2019
                 </div>
             </div>
         </div>
@@ -909,13 +909,13 @@
             </div>
 
         </div>
-        <div id="small-chat">
+       <!-- <div id="small-chat">
             <span class="badge badge-warning pull-right">5</span>
             <a class="open-small-chat">
                 <i class="fa fa-comments"></i>
 
             </a>
-        </div>
+        </div>-->
     </div>
     <script src="js/jquery.min.js?v=2.1.4"></script>
     <script src="js/bootstrap.min.js?v=3.3.6"></script>
