--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <div class="sidebar-collapse">
                 <ul class="nav" id="side-menu">
                     <li class="nav-header">
-                        <div class="dropdown profile-element">
-                            <span><img alt="image" class="img-circle" src="img/profile_small.jpg" /></span>
+                        <div class="dropdown profile-element" style="text-align: center">
+                            <span><img alt="image" class="img-circle" src="img/profile_small.jpg" style="width: 130px"/></span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <span class="clear">
-                               <span class="block m-t-xs"><strong class="font-bold">API 1000</strong></span>
-                                <span class="text-muted text-xs block">联系我们<b class="caret"></b></span>
+                               <span class="block m-t-xs" style="padding-top: 5px"><strong class="font-bold">API 1000</strong></span>
+                                <!--<span class="text-muted text-xs block">联系我们<b class="caret"></b></span>-->
                                 </span>
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a class="J_menuItem" href="form_avatar.html"><a href="http://wpa.qq.com/msgrd?v=3&amp;uin=80405708&amp;site=qq&amp;menu=yes" target="_blank">QQ：80405708</a></a>
                                 </li>
-                                <li><a class="J_menuItem" href="javascript:;">微信：80405708</a>
+                                <li><a class="J_menuItem" href="javascript:;">Email: 80405708@qq.com</a>
                                 </li>
                             </ul>
                         </div>
@@ -68,7 +68,7 @@
                         </ul>
 
                     </li>
-                    <!--<li>
+                    <li>
                         <a href="#">
                             <i class="fa fa-home"></i>
                             <span class="nav-label">主页</span>
@@ -379,7 +379,7 @@
                             <li><a class="J_menuItem" href="form_builder.html">表单构建器</a>
                             </li>
                         </ul>
-                    </li>-->
+                    </li>
 
                 </ul>
             </div>
